adding links and title

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
-<h1>Testing!!!</h1>
+<head>
+    <title>Jarod Wylie</title>
 
 
+</head>
 
 
-
+<ul>
+    <li><a href="https://github.com/JarodYli">Github</a> </li>
+    <li><a href="https://www.linkedin.com/in/jarod-wylie-6546a217a/">LinkedIn</a></li>
+    <li><a href="https://stackoverflow.com/users/10981983/jarod-wylie">Stack Overflow</a></li>
+</ul>
 
 
 </html>
