name and profile

--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
 
 </head>
 
+<body>
 
+    <h1>Jarod Wylie</h1>
+    <p>My name is Jarod Wylie. I will be participating in Awesome Inc's spring 
+        boot camp.</p>
+    <h2>Links</h2>
 <ul>
     <li><a href="https://github.com/JarodYli">Github</a> </li>
     <li><a href="https://www.linkedin.com/in/jarod-wylie-6546a217a/">LinkedIn</a></li>
     <li><a href="https://stackoverflow.com/users/10981983/jarod-wylie">Stack Overflow</a></li>
 </ul>
 
-
+</body>
 </html>
