--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <title>Jarod Wylie</title>
 <body>
-        <img src="jmwy.jpg" alt="Jarod Wylie">
+        <img src="IMG-3629.JPG" alt="Jarod Wylie">
     <h1>Jarod Wylie</h1>
     <p>My name is Jarod Wylie. I will be participating in Awesome Inc's spring 
         boot camp.</p>
