--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://github.com/JarodYli/JarodYli.github.io/blob/master/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
  
 <title>Jarod Wylie</title>
