removing html template from intro-html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <link rel="stylesheet" href="styles.css">
 
             <h1>Jarod Wylie</h1>
-            <h2><a href="#" class="btn btn-info" role="button">Home</a><a href="https://jarodyli.github.io/intro-html/" class="btn btn-info" role="button">Blog</a></h2>
+            <h2><a href="#" class="btn btn-info" role="button">Home</a><a href="intro-html/blog.html" class="btn btn-info" role="button">Blog</a></h2>
 
             <img src="IMG-3629.jpg" alt="Jarod Wylie">
             <p>My name is Jarod Wylie. I will be participating in Awesome Inc's spring 
